Privilegios view rbac

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -40,7 +40,7 @@
                     
                     <div class="input-field col s12">
                         <i class="material-icons prefix">account_circle</i>
-                        <input class="validate" type="text" placeholder="example@gmail.com" name="us_nombre" id="us_nombre">
+                        <input class="validate" type="text" placeholder="Emiliano Olea" name="us_nombre" id="us_nombre">
                         <label for="us_nombre" data-error="wrong" data-success="right">Nombre</label>
                     </div>
                   
