multiple files upload

--- a/views/nuevo_museo.ejs
+++ b/views/nuevo_museo.ejs
@@ -80,6 +80,17 @@
                                          <span class="helper-text" data-error="Este input es requerido"></span>
                                          <div> Google Maps API integration goes here </div>
                                      </div>
+                                     <div class="col s9 offset-s2">
+                                        <input type="text" name="audioname" id="audioname" style="display:none">
+                                     <div class="card imgPicker">
+                                         <div class="card-image">
+                                            <!-- <img class="imgPicker imgP" src="/img/no-img.jpg">
+                                            <div class="primary-color waves-effect waves-light btn-floating halfway-fab button-upload"
+                                                onclick="uploadFile.click()"><i class="material-icons">edit</i></div> -->
+                                            <input type="file" name="uploadAudio" id="uploadAudio">
+                                         </div>
+                                     </div>
+                                 </div>
                                     <div class="step-actions">
                                         <div class="row">
                                             <div class="col"> <button class="red btn btn-reset" type="reset"> Resetear <i class="material-icons left"> clear </i>  </button> </div>
