--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -41,3 +41,9 @@
     <li tabindex="0"><a href="/usuario/logout">Cerrar Sesión</a></li>
   </ul>
 
+  <script>
+    $(document).ready(function() {
+    $('input#input_text, textarea#textarea2,input').characterCounter();
+    });
+  </script>
+
