--- a/views/includes/header_image.ejs
+++ b/views/includes/header_image.ejs
@@ -40,6 +40,12 @@
     </div>
   </nav>
 
+  <script>
+    $(document).ready(function() {
+    $('input#input_text, textarea#textarea2,input').characterCounter();
+    });
+  </script>
+  
   <ul id="dropdown123" class="dropdown-content" tabindex="0">
     <li tabindex="0"><a href="/usuario/logout">Cerrar Sesión</a></li>
   </ul>
