--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -21,17 +21,13 @@
       
     </div>
   </footer>
-  
-
   <script src="js/init.js"></script>
-  
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="lib/jquery.formatter.min.js"></script>
   <script src="/js/profile.js"></script>
-  <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOonz9xYahAmBqfXi0Vy6zdrHAlj9Pdw8&callback=initMap&v=weekly"
-      defer
-    ></script>
-
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOonz9xYahAmBqfXi0Vy6zdrHAlj9Pdw8&callback=initMap&v=weekly" defer ></script>
   <script>
     M.AutoInit();
   </script>
+
 </html>
