--- a/views/rbac_registrar.ejs
+++ b/views/rbac_registrar.ejs
@@ -11,8 +11,9 @@
     <div class="search_box">
       <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Buscar (Nombre, Rol, Museo)">
     </div>
+    <%if (rol==4){%>
     <button class="waves-effect waves-light btn" href="#modal2" onclick="createUser()">Nuevo Usuario</button>
- 
+      <%}%>
     <table id="myTable" class="centered">
 
       <tr class="header" id="title">
