--- a/views/includes/header_image.ejs
+++ b/views/includes/header_image.ejs
@@ -20,7 +20,7 @@
   <script src="https://unpkg.com/materialize-stepper@3.1.0/dist/js/mstepper.min.js"></script>
   <script>
     $(document).ready(function() {
-      M.CharacterCounter.init($('input'));
+      M.CharacterCounter.init($('input[type="text"]'));
     });
   </script>
   
