minor develop fixes

--- a/views/principal.ejs
+++ b/views/principal.ejs
@@ -17,7 +17,7 @@
     <div class="col s12 margin-0" style="padding:0px">
       <div class="container-pers" style="position:relative">
         <div class="row">
-          <%if (rol != 4){%>
+          <%if (rol === 4){%>
           <a href="/museo/nuevo_museo" style="position:absolute;top:40%;left:100%" class="waves-effect waves-light btn-floating primary-color"><i class="material-icons left">add</i></a>
           <%}%>
           <ul id="cards" class="cards">
