--- a/views/agregar_guia.ejs
+++ b/views/agregar_guia.ejs
@@ -22,7 +22,7 @@
                                     <div class="file-field input-field">
                                         <a type="file"
                                             class="btn-floating halfway-fab waves-effect waves-light blue-gradient-btn">
-                                            <input type="file" accept="image/png, image/jpg, image/jpeg" name="imagen">
+                                            <input id="imagen_limitacion" type="file" accept="image/png, image/jpg, image/jpeg" name="imagen">
                                             <i class="tiny material-icons">edit</i>
                                         </a>
                                     </div>
