--- a/views/agregar_link.ejs
+++ b/views/agregar_link.ejs
@@ -19,14 +19,7 @@
                         <div class="col s3 center" style="margin-top: 0px; margin-right: 2em; margin-left: 2em;">
                             <div class="card" style="border-radius: 20px;">
                                 <div class="card-image">
-                                    <img src="/img/no-img.jpg" style="border-radius: 20px;">
-                                    <div class="file-field input-field">
-                                        <a type="file" onclick="filebutton.click()"
-                                            class="btn-floating halfway-fab waves-effect waves-light blue-gradient-btn">
-                                            <input type="file" accept="image/png, image/jpg, image/jpeg" name="icono">
-                                            <i class="tiny material-icons">edit</i>
-                                        </a>
-                                    </div>
+                                    <img src="/img/linkIcon.png" style="border-radius: 20px;">
                                 </div>
                             </div>
                         </div>
