--- a/views/agregar_guia.ejs
+++ b/views/agregar_guia.ejs
@@ -22,7 +22,7 @@
                                     <div class="file-field input-field">
                                         <a type="file"
                                             class="btn-floating halfway-fab waves-effect waves-light blue-gradient-btn">
-                                            <input id="imagen_limitacion" type="file" accept="image/png, image/jpg, image/jpeg" name="imagen">
+                                            <input id="imagen_limitacion" type="file" accept="image/png, image/jpg, image/jpeg" name="imagen_limitacion">
                                             <i class="tiny material-icons">edit</i>
                                         </a>
                                     </div>
@@ -41,7 +41,7 @@
                                     <h5>Icono</h5>
                                     <!-- <label for="icono_limitacion">Icono de la Limitación</label> -->
                                     <input id="icono_limitacion" type="file" class="customFile"
-                                        accept="image/png, image/jpg, image/jpeg" name="icono">
+                                        accept="image/png, image/jpg, image/jpeg" name="icono_limitacion">
                                 </div>
                             </div>
                             <div class="row">
