--- a/views/nuevo_museo.ejs
+++ b/views/nuevo_museo.ejs
@@ -12,7 +12,7 @@
                             <div class="card-header mb2"> 
                             </div>
                             <form id="uploadForm" action="/" enctype="multipart/form-data">
-                            <ul class="stepper linear">
+                            <ul class="stepper  linear horizontal">
                             <li class="step active"> 
                                 <div class="step-title waves-effect"> <p>Información</p> </div>
                                 <div class="step-content">
